@@ -12,6 +12,9 @@ Test
 * retrieve data from the information file on open
 * make sure certain values cannot be changed if writing/reading from raw files
 
+20100201
+* worked on metadata functions for libsmio
+
 20100129
 * worked on metadata functions for libsmio
 * refactored common code
